Greyform-linux/Python_Application/log/build_2024-09-02_10-15-46/talker_listener/stderr.log
  File "/home/winsys/ros2_ws/src/Greyform-linux/Python_Application/install/talker_listener/lib/python3.10/site-packages/talker_listener/listener_node.py", line 129
    dialog = logs.LogDialog(message, , self.title, log_type="error")
                                     ^
SyntaxError: invalid syntax

